@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.cryptomator</groupId>
     <artifactId>fuse-nio-adapter</artifactId>
-    <version>4.0.0</version>
+    <version>5.0.0</version>
     <name>FUSE-NIO-Adapter</name>
     <description>Access resources at a given NIO path via FUSE.</description>
     <url>https://github.com/cryptomator/fuse-nio-adapter</url>
@@ -17,23 +17,23 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.build.jdk>21</project.build.jdk>
+        <project.build.jdk>22</project.build.jdk>
 
         <!-- dependencies -->
-        <integrations-api.version>1.3.0</integrations-api.version>
-        <jfuse.version>0.6.3</jfuse.version>
-        <slf4j.version>2.0.9</slf4j.version>
+        <integrations-api.version>1.3.1</integrations-api.version>
+        <jfuse.version>0.7.0</jfuse.version>
+        <slf4j.version>2.0.13</slf4j.version>
         <caffeine.version>3.1.8</caffeine.version>
 
         <!-- test dependencies -->
-        <junit.jupiter.version>5.10.0</junit.jupiter.version>
-        <mockito.version>5.6.0</mockito.version>
-        <cryptofs.version>2.6.7</cryptofs.version>
+        <junit.jupiter.version>5.10.2</junit.jupiter.version>
+        <mockito.version>5.11.0</mockito.version>
+        <cryptofs.version>2.6.9</cryptofs.version>
 
         <!-- build dependencies -->
-        <dependency-check.version>8.4.2</dependency-check.version>
+        <dependency-check.version>9.1.0</dependency-check.version>
         <maven.deploy.version>3.1.1</maven.deploy.version>
-        <jacoco.version>0.8.11</jacoco.version>
+        <jacoco.version>0.8.12</jacoco.version>
     </properties>
 
     <licenses>
@@ -152,14 +152,24 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>3.13.0</version>
                 <configuration>
                     <showWarnings>true</showWarnings>
                     <release>${project.build.jdk}</release>
-                    <compilerArgs>
-                        <compilerArg>--enable-preview</compilerArg>
-                    </compilerArgs>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.6.1</version>
+                <executions>
+                    <execution>
+                        <id>jar-paths-to-properties</id>
+                        <goals>
+                            <goal>properties</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -179,19 +189,19 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.1</version>
+                <version>3.2.5</version>
                 <configuration>
-                    <argLine>@{surefire.jacoco.args} --enable-preview --enable-native-access=ALL-UNNAMED</argLine>
+                    <argLine>@{surefire.jacoco.args} -javaagent:${net.bytebuddy:byte-buddy-agent:jar}</argLine>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.3.0</version>
+                <version>3.4.1</version>
             </plugin>
             <plugin>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.3.0</version>
+                <version>3.3.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -203,7 +213,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.6.0</version>
+                <version>3.6.3</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -236,19 +246,19 @@
                         <artifactId>dependency-check-maven</artifactId>
                         <version>${dependency-check.version}</version>
                         <configuration>
-                            <cveValidForHours>24</cveValidForHours>
+                            <nvdValidForHours>24</nvdValidForHours>
                             <failBuildOnCVSS>0</failBuildOnCVSS>
                             <skipTestScope>true</skipTestScope>
                             <detail>true</detail>
-                            <suppressionFiles>
-                                <suppressionFile>suppression.xml</suppressionFile>
-                            </suppressionFiles>
+                            <suppressionFile>suppression.xml</suppressionFile>
+                            <nvdApiKeyEnvironmentVariable>NVD_API_KEY</nvdApiKeyEnvironmentVariable>
                         </configuration>
                         <executions>
                             <execution>
                                 <goals>
                                     <goal>check</goal>
                                 </goals>
+                                <phase>validate</phase>
                             </execution>
                         </executions>
                     </plugin>
@@ -282,7 +292,7 @@
                 <plugins>
                     <plugin>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>3.1.0</version>
+                        <version>3.2.4</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
